# fpl-exploration-tool

./: .gitignore  README.md  fpl-exploration-tool.cabal  stack.yaml
app/: Main.hs
examples/: example.fpl
examples/codeOfGenLangs/: depTypedLC.lc
examples/langSpecs/: convoluted.fpl  depTypedLC.fpl  depTypedLC_wrong.fpl
examples/tests/: example.fpl
examples/tests/fail/: almost.fpl  example.fpl  example2.fpl  tst1.fpl
examples/tests/pass/: tst1.fpl
src/: AST.hs  Lexer.hs  Lexer.x  Parser.y  TypeCheck.hs
src/langGenerator/: CodeGen.hs  Generator.hs  Lang.hs  SimpleBound.hs  experims.hs  helpers.hs
src/langGenerator/CodeGen/: ADT.hs  Common.hs  ConsCtx.hs  Infer.hs  MonadInstance.hs  Nf.hs
src/langGenerator/CodeGen/Infer/: Common.hs  Exprs.hs  Helpers.hs  RightSide.hs  Solver.hs
src/langGenerator/CodeGen/RightSide/: Common.hs  Exprs.hs  Helpers.hs  Infer.hs  Nf.hs  Solver.hs
src/langGenerator/Default/: .gitignore  AST.hs  DefaultLexer.hs  Grammar.y  Lexer.x  PStruct.hs  Tokens.x
src/langGenerator/GeneratorTemplates/: LangTemplate.hs  LangTemplate2.hs  LangTemplate_old.hs  Parser.y
src/langGenerator/Lexer/: Lexer.x
src/specLang/: AST.hs  Lexer.x  Parser.y  SortCheck.hs  TypeCheck.hs
src/specLang/AST/: Axiom.hs  Judgement.hs  Reduction.hs  Term.hs
src/specLang/SortCheck/: AxCtxVars.hs  Axiom.hs  Forall.hs  FunSym.hs  Judgement.hs  Reduction.hs  Sort.hs  SymbolTable.hs  Term.hs
src/specLang/parsLex/: Lexer.x  Parser.y
test/specLang/: TestSortCheck.hs
