name:                fpl-exploration-tool
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/fpl-exploration-tool#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/specLang
                     , src/specLang/parsLex
  exposed-modules:     SortCheck
  build-depends:       base >= 4.7 && < 5
                     , array == 0.5.1.*
                     , mtl   == 2.2.*
                     , containers == 0.5.*
                     , transformers == 0.5.*
                     , lens >= 4.14
  default-language:    Haskell2010

executable fpl-exploration-tool-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fpl-exploration-tool
                     , array == 0.5.1.*
  default-language:    Haskell2010

test-suite fpl-exploration-tool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fpl-exploration-tool
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fpl-exploration-tool
